--- a/Portada.html
+++ b/Portada.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/estilosPortada.css">
-    <link rel="stylesheet" href="CSS/font.css">
+    <link rel="stylesheet" href="css/estilosPortada.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <title>NBA</title>
