--- a/portada.html
+++ b/portada.html
@@ -19,7 +19,7 @@
     <!-- En la header tenemos el logo de nuestra pagina junto con el menu -->
     <header>
         <a href="Portada.html" class="enlace">
-            <img src="Imagenes/logo.png" alt="Logo de la NBA" class="logo">
+            <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
         <label for="check" class="mostrar-menu">
