--- a/jugadores.html
+++ b/jugadores.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="Portada.html" class="enlace">
+        <a href="portada.html" class="enlace">
             <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
@@ -24,7 +24,7 @@
         </label>
         <nav class="menu">
             <ul>
-                <li><a href="Portada.html" rel="noopener noreferrer">Inicio</a></li>
+                <li><a href="portada.html" rel="noopener noreferrer">Inicio</a></li>
                 <li><a class="active" href="#">Jugadores</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
 
