--- a/portada.html
+++ b/portada.html
@@ -18,7 +18,7 @@
     <!-- HEADER -->
     <!-- En la header tenemos el logo de nuestra pagina junto con el menu -->
     <header>
-        <a href="Portada.html" class="enlace">
+        <a href="portada.html" class="enlace">
             <img src="imagenes/logo.png" alt="Logo de la NBA" class="logo">
         </a>
         <input type="checkbox" id="check">
